Introduces automated GH actions build and plugin release automation
This switches the plugin to similar build+release process as other plugins, via GitHub Actions.

- Uses gocd-plugin-gradle-task-helpers to generate plugin metadata
- Automatically generates changelogs
- Automatically bumps versions by including a build/commit number
- Minor bumps to libraries
- Removes need for commons-io to reduce plugin size